Fix double scrollbar issue on windows browsers

--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -26,6 +26,6 @@
   }
 
   .show li {
-    @apply my-2 ml-4;
+    @apply my-4 ml-6;
   }
 }
